// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppController (e2e) should support requesting a page of pokemons (default order is by ID) 1`] = `
{
  "items": [
    {
      "attacks": {
        "fast": [
          {
            "damage": 10,
            "name": "Ember",
            "type": "Fire",
          },
          {
            "damage": 6,
            "name": "Scratch",
            "type": "Normal",
          },
        ],
        "special": [
          {
            "damage": 30,
            "name": "Flame Burst",
            "type": "Fire",
          },
          {
            "damage": 25,
            "name": "Flame Charge",
            "type": "Fire",
          },
          {
            "damage": 55,
            "name": "Flamethrower",
            "type": "Fire",
          },
        ],
      },
      "classification": "Lizard Pokémon",
      "evolutionRequirements": {
        "amount": 25,
        "name": "Charmander candies",
      },
      "evolutions": [
        {
          "id": "006",
          "name": "Charizard",
        },
        {
          "id": "005",
          "name": "Charmeleon",
        },
      ],
      "fleeRate": 0.1,
      "height": {
        "maximum": "0.68m",
        "minimum": "0.53m",
      },
      "id": "004",
      "maxCP": 841,
      "maxHP": 955,
      "name": "Charmander",
      "resistant": [
        "Fire",
        "Grass",
        "Ice",
        "Bug",
        "Steel",
        "Fairy",
      ],
      "types": [
        "Fire",
      ],
      "weaknesses": [
        "Water",
        "Ground",
        "Rock",
      ],
      "weight": {
        "maximum": "9.56kg",
        "minimum": "7.44kg",
      },
    },
    {
      "Previous evolution(s)": [
        {
          "id": "004",
          "name": "Charmander",
        },
      ],
      "attacks": {
        "fast": [
          {
            "damage": 10,
            "name": "Ember",
            "type": "Fire",
          },
          {
            "damage": 6,
            "name": "Scratch",
            "type": "Normal",
          },
        ],
        "special": [
          {
            "damage": 55,
            "name": "Flamethrower",
            "type": "Fire",
          },
          {
            "damage": 30,
            "name": "Flame Burst",
            "type": "Fire",
          },
          {
            "damage": 40,
            "name": "Fire Punch",
            "type": "Fire",
          },
        ],
      },
      "classification": "Flame Pokémon",
      "evolutionRequirements": {
        "amount": 100,
        "name": "Charmander candies",
      },
      "evolutions": [
        {
          "id": "006",
          "name": "Charizard",
        },
      ],
      "fleeRate": 0.07,
      "height": {
        "maximum": "1.24m",
        "minimum": "0.96m",
      },
      "id": "005",
      "maxCP": 1411,
      "maxHP": 1557,
      "name": "Charmeleon",
      "resistant": [
        "Fire",
        "Grass",
        "Ice",
        "Bug",
        "Steel",
        "Fairy",
      ],
      "types": [
        "Fire",
      ],
      "weaknesses": [
        "Water",
        "Ground",
        "Rock",
      ],
      "weight": {
        "maximum": "21.38kg",
        "minimum": "16.63kg",
      },
    },
    {
      "Previous evolution(s)": [
        {
          "id": "005",
          "name": "Charmeleon",
        },
        {
          "id": "004",
          "name": "Charmander",
        },
      ],
      "attacks": {
        "fast": [
          {
            "damage": 10,
            "name": "Ember",
            "type": "Fire",
          },
          {
            "damage": 9,
            "name": "Wing Attack",
            "type": "Flying",
          },
        ],
        "special": [
          {
            "damage": 35,
            "name": "Dragon Claw",
            "type": "Dragon",
          },
          {
            "damage": 100,
            "name": "Fire Blast",
            "type": "Fire",
          },
          {
            "damage": 55,
            "name": "Flamethrower",
            "type": "Fire",
          },
        ],
      },
      "classification": "Flame Pokémon",
      "fleeRate": 0.05,
      "height": {
        "maximum": "1.91m",
        "minimum": "1.49m",
      },
      "id": "006",
      "maxCP": 2413,
      "maxHP": 2602,
      "name": "Charizard",
      "resistant": [
        "Fire",
        "Grass",
        "Fighting",
        "Bug",
        "Steel",
        "Fairy",
      ],
      "types": [
        "Fire",
        "Flying",
      ],
      "weaknesses": [
        "Water",
        "Electric",
        "Rock",
      ],
      "weight": {
        "maximum": "101.81kg",
        "minimum": "79.19kg",
      },
    },
  ],
  "meta": {
    "count": 151,
    "limit": 3,
    "skip": 3,
  },
}
`;

exports[`AppController (e2e) should support requesting a page of pokemons filtered by type (default order is by ID) 1`] = `
{
  "items": [
    {
      "attacks": {
        "fast": [
          {
            "damage": 10,
            "name": "Ember",
            "type": "Fire",
          },
          {
            "damage": 6,
            "name": "Scratch",
            "type": "Normal",
          },
        ],
        "special": [
          {
            "damage": 30,
            "name": "Flame Burst",
            "type": "Fire",
          },
          {
            "damage": 55,
            "name": "Flamethrower",
            "type": "Fire",
          },
          {
            "damage": 25,
            "name": "Flame Charge",
            "type": "Fire",
          },
        ],
      },
      "classification": "Lizard Pokémon",
      "evolutionRequirements": {
        "amount": 25,
        "name": "Charmander candies",
      },
      "evolutions": [
        {
          "id": "005",
          "name": "Charmeleon",
        },
        {
          "id": "006",
          "name": "Charizard",
        },
      ],
      "fleeRate": 0.1,
      "height": {
        "maximum": "0.68m",
        "minimum": "0.53m",
      },
      "id": "004",
      "maxCP": 841,
      "maxHP": 955,
      "name": "Charmander",
      "resistant": [
        "Fire",
        "Grass",
        "Ice",
        "Bug",
        "Steel",
        "Fairy",
      ],
      "types": [
        "Fire",
      ],
      "weaknesses": [
        "Water",
        "Ground",
        "Rock",
      ],
      "weight": {
        "maximum": "9.56kg",
        "minimum": "7.44kg",
      },
    },
    {
      "Previous evolution(s)": [
        {
          "id": "004",
          "name": "Charmander",
        },
      ],
      "attacks": {
        "fast": [
          {
            "damage": 6,
            "name": "Scratch",
            "type": "Normal",
          },
          {
            "damage": 10,
            "name": "Ember",
            "type": "Fire",
          },
        ],
        "special": [
          {
            "damage": 55,
            "name": "Flamethrower",
            "type": "Fire",
          },
          {
            "damage": 30,
            "name": "Flame Burst",
            "type": "Fire",
          },
          {
            "damage": 40,
            "name": "Fire Punch",
            "type": "Fire",
          },
        ],
      },
      "classification": "Flame Pokémon",
      "evolutionRequirements": {
        "amount": 100,
        "name": "Charmander candies",
      },
      "evolutions": [
        {
          "id": "006",
          "name": "Charizard",
        },
      ],
      "fleeRate": 0.07,
      "height": {
        "maximum": "1.24m",
        "minimum": "0.96m",
      },
      "id": "005",
      "maxCP": 1411,
      "maxHP": 1557,
      "name": "Charmeleon",
      "resistant": [
        "Fire",
        "Grass",
        "Ice",
        "Bug",
        "Steel",
        "Fairy",
      ],
      "types": [
        "Fire",
      ],
      "weaknesses": [
        "Water",
        "Ground",
        "Rock",
      ],
      "weight": {
        "maximum": "21.38kg",
        "minimum": "16.63kg",
      },
    },
    {
      "attacks": {
        "fast": [
          {
            "damage": 10,
            "name": "Quick Attack",
            "type": "Normal",
          },
          {
            "damage": 10,
            "name": "Ember",
            "type": "Fire",
          },
        ],
        "special": [
          {
            "damage": 55,
            "name": "Flamethrower",
            "type": "Fire",
          },
          {
            "damage": 25,
            "name": "Flame Charge",
            "type": "Fire",
          },
          {
            "damage": 40,
            "name": "Body Slam",
            "type": "Normal",
          },
        ],
      },
      "classification": "Fox Pokémon",
      "evolutionRequirements": {
        "amount": 50,
        "name": "Vulpi",
      },
      "evolutions": [
        {
          "id": "038",
          "name": "Ninetales",
        },
      ],
      "fleeRate": 0.1,
      "height": {
        "maximum": "0.68m",
        "minimum": "0.53m",
      },
      "id": "037",
      "maxCP": 725,
      "maxHP": 831,
      "name": "Vulpix",
      "resistant": [
        "Fire",
        "Grass",
        "Ice",
        "Bug",
        "Steel",
        "Fairy",
      ],
      "types": [
        "Fire",
      ],
      "weaknesses": [
        "Water",
        "Ground",
        "Rock",
      ],
      "weight": {
        "maximum": "11.14kg",
        "minimum": "8.66kg",
      },
    },
  ],
  "meta": {
    "count": 151,
    "limit": 3,
    "skip": 0,
  },
}
`;

exports[`AppController (e2e) should support requesting a page of pokemons filtered by type and favorites 1`] = `
{
  "items": [
    {
      "attacks": {
        "fast": [
          {
            "damage": 10,
            "name": "Ember",
            "type": "Fire",
          },
          {
            "damage": 10,
            "name": "Quick Attack",
            "type": "Normal",
          },
        ],
        "special": [
          {
            "damage": 40,
            "name": "Body Slam",
            "type": "Normal",
          },
          {
            "damage": 55,
            "name": "Flamethrower",
            "type": "Fire",
          },
          {
            "damage": 25,
            "name": "Flame Charge",
            "type": "Fire",
          },
        ],
      },
      "classification": "Fox Pokémon",
      "evolutionRequirements": {
        "amount": 50,
        "name": "Vulpi",
      },
      "evolutions": [
        {
          "id": "038",
          "name": "Ninetales",
        },
      ],
      "fleeRate": 0.1,
      "height": {
        "maximum": "0.68m",
        "minimum": "0.53m",
      },
      "id": "037",
      "maxCP": 725,
      "maxHP": 831,
      "name": "Vulpix",
      "resistant": [
        "Fire",
        "Grass",
        "Ice",
        "Bug",
        "Steel",
        "Fairy",
      ],
      "types": [
        "Fire",
      ],
      "weaknesses": [
        "Water",
        "Ground",
        "Rock",
      ],
      "weight": {
        "maximum": "11.14kg",
        "minimum": "8.66kg",
      },
    },
    {
      "Previous evolution(s)": [
        {
          "id": "037",
          "name": "Vulpix",
        },
      ],
      "attacks": {
        "fast": [
          {
            "damage": 10,
            "name": "Quick Attack",
            "type": "Normal",
          },
          {
            "damage": 10,
            "name": "Ember",
            "type": "Fire",
          },
        ],
        "special": [
          {
            "damage": 80,
            "name": "Heat Wave",
            "type": "Fire",
          },
          {
            "damage": 55,
            "name": "Flamethrower",
            "type": "Fire",
          },
          {
            "damage": 100,
            "name": "Fire Blast",
            "type": "Fire",
          },
        ],
      },
      "classification": "Fox Pokémon",
      "fleeRate": 0.06,
      "height": {
        "maximum": "1.24m",
        "minimum": "0.96m",
      },
      "id": "038",
      "maxCP": 2015,
      "maxHP": 2188,
      "name": "Ninetales",
      "resistant": [
        "Fire",
        "Grass",
        "Ice",
        "Bug",
        "Steel",
        "Fairy",
      ],
      "types": [
        "Fire",
      ],
      "weaknesses": [
        "Water",
        "Ground",
        "Rock",
      ],
      "weight": {
        "maximum": "22.39kg",
        "minimum": "17.41kg",
      },
    },
  ],
  "meta": {
    "count": 151,
    "limit": 20,
    "skip": 0,
  },
}
`;
